examples/test/testpolicy17653.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17653
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key16: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value18
          key44: value45
      podSelector:
        matchLabels:
          key14: value20
          key5: value26
